[package]
name = "OSTrain"
version = "0.1.0"
edition = "2018"
authors = ["shawtao <1203405394@qq.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.3"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
