[package]
name = "OSTrain"
version = "0.1.0"
edition = "2018"
authors = ["shawtao <1203405394@qq.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build]
target = "x86_64-blog_os.json"

[dependencies]
bootloader = "0.9.3"
volatile = "0.2.6"
spin = "0.9.0"
x86_64 = "0.14.3"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]


[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[target.'cfg(target_os = "none")']
runner = "bootimage runner"

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04"]

